B-F Sandbox Full-Backup/src/objects/Promotion_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Infowelders</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Budget__c</fullName>
        <description>INFOWELDERS</description>
        <label>Activity Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <description>AUD -  Promotion Type Picklist</description>
        <label>Activity</label>
        <picklist>
            <controllingField>Promotion_Type__c</controllingField>
            <picklistValues>
                <fullName>Sales Promotion Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreements</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Begin_Date__c</fullName>
        <description>INFOWELDERS</description>
        <label>Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders</description>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Promotion Activities</relationshipLabel>
        <relationshipName>Promotion_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Cost_Center__c</fullName>
        <description>Budget Cost Center - BFA Marketing Requirement</description>
        <label>Budget Cost Center</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Management_Group__c</fullName>
        <label>Customer Management Group</label>
        <picklist>
            <picklistValues>
                <fullName>Coles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woolworths</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Infowelders</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>INFOWELDERS</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Comments__c</fullName>
        <label>Evaluation Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Evaluation_Rating__c</fullName>
        <label>Evaluation Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_by_Workflow__c</fullName>
        <description>PARX - Jochen Schrader: Group Information has to be calculated by workflow because formula was too big</description>
        <label>Group by Workflow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_calculated__c</fullName>
        <description>PARX - Jochen Schrader: P00013 To track Goals on Promotions</description>
        <formula>Group_by_Workflow__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders</description>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Promotion Activities</relationshipLabel>
        <relationshipName>Promotion_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mechanics__c</fullName>
        <label>Mechanics</label>
        <picklist>
            <controllingField>Sub_Type__c</controllingField>
            <picklistValues>
                <fullName>All Other Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMP Brand Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF Promo Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chilled Product Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocktail List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diageo Trading Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink Ware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Pour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift on Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift With Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Fridge Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise RTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise RTD Restriction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point Of Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sampling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Prize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tailor Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theatre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win In Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xmas Lines</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NSW__c</fullName>
        <label>NSW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Team__c</fullName>
        <label>Project Team</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMD</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Category__c</fullName>
        <label>Promotion Category</label>
        <picklist>
            <picklistValues>
                <fullName>Staffed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win in Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift with Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sampling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <description>INFOWELDERS</description>
        <label>Promotion Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Goal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PARX - Jochen Schrader - P00013: Number of Promotions each Sales Rep should do with this Promotion Activity and the selected Subgroup. Groups are calculated automatically</description>
        <inlineHelpText>Number of Promotions each Sales Rep should do with this Promotion Activity and the selected Subgroup</inlineHelpText>
        <label>Promotion Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotion_Subtype__c</fullName>
        <label>Promotion Subtype</label>
        <picklist>
            <controllingField>Promotion_Type__c</controllingField>
            <picklistValues>
                <fullName>Cold box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink Menu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Sampling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Type__c</fullName>
        <description>INFOWELDERS</description>
        <label>Promotion Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theme Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Promo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QLD__c</fullName>
        <label>QLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_NT__c</fullName>
        <label>SA &amp; NT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>AUD - Promotion Activity Subtype</description>
        <label>Sub Type</label>
        <picklist>
            <controllingField>Activity__c</controllingField>
            <picklistValues>
                <fullName>Above The Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Other SPAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below The Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Run Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staffed Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win In Store Promotion</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subgroup_Germany__c</fullName>
        <description>PARX - Jochen Schrader - P00013: The subgroup the goal has to be achieved in.</description>
        <inlineHelpText>The subgroup the goal has to be achieved in.</inlineHelpText>
        <label>Subgroup</label>
        <picklist>
            <picklistValues>
                <fullName>Adult Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency/Vendor Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Res.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authentic Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar/Pub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beer Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabacra Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cafe/Deli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casino / Gambling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual Night Club / Roadhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caterer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conventional Liquor Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darts Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinning Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disco Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duty Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethnic Res.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Target_Demographic__c</fullName>
        <label>Target Demographic</label>
        <picklist>
            <picklistValues>
                <fullName>LDA-24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24-32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Target_Depletion__c</fullName>
        <description>INFOWELDERS</description>
        <label>Target Depletion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Outlets__c</fullName>
        <description>INFOWELDERS</description>
        <label>Target Outlets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Allocations__c</fullName>
        <label>Total Allocations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Presenter__c</fullName>
        <label>Trade Presenter</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIC_TAS__c</fullName>
        <label>VIC &amp; TAS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WA__c</fullName>
        <label>WA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wombat_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If &quot;True&quot; Bring this field into Wombat</description>
        <inlineHelpText>Select to bring down to &apos;Wombat&apos;</inlineHelpText>
        <label>Wombat Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Promotion Activity</label>
    <listViews>
        <fullName>AUD_All_Activites_for_this_Market</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Market__c</columns>
        <columns>Promotion_Code__c</columns>
        <columns>Promotion_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>AUD - All Activites for this Market</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Promotion_Type__c</columns>
        <columns>Brand__c</columns>
        <columns>NAME</columns>
        <columns>Begin_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Promotion_Code__c</columns>
        <columns>Target_Depletion__c</columns>
        <columns>Target_Outlets__c</columns>
        <columns>Activity_Budget__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <role>APAC KJ / Admin</role>
            <role>APAC MD / Admin</role>
            <role>APAC SE / Admin</role>
            <role>CAD-Market Manager/Admin</role>
            <role>CHN-Market Manager/Admin</role>
            <role>DEU-Market Manager/Admin</role>
            <role>Global Administrator</role>
            <role>INR-Market Manager/Admin</role>
            <role>JPN-Market Manager/Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada_Promo_Activities</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Promotion_Type__c</columns>
        <columns>Brand__c</columns>
        <columns>Begin_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>contains</operation>
            <value>Canada</value>
        </filters>
        <label>Canada - Promo Activities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CAD-Bus Dev East(BF)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Bus Dev West(BF)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Market Manager/Admin</roleAndSubordinates>
            <roleAndSubordinates>CAD-Marketing Director</roleAndSubordinates>
            <roleAndSubordinates>CAD-National Level (BF)</roleAndSubordinates>
            <roleAndSubordinates>CAD-National Level (Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Manager Alberta(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Manager BC(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Manager Ontario(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Manager Quebec(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Rep Alberta(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Rep BC(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Rep Manitoba(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Rep Ontario(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Rep Quebec(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Rep Saskatchewan(Hive)</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chn_All_Activities_for_this_Market</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Brand__c</columns>
        <columns>Promotion_Type__c</columns>
        <columns>Begin_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Active__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>China - All Activities for this Market</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
            <roleAndSubordinates>CHN-Market Manager/Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEU_All_Activities_for_this_Market</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Promotion_Type__c</columns>
        <columns>Promotion_Code__c</columns>
        <columns>Active__c</columns>
        <columns>Target_Outlets__c</columns>
        <columns>Target_Depletion__c</columns>
        <columns>Begin_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Germany</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DEU - All Activities for this Market</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
            <roleAndSubordinates>DEU-Market Manager/Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>India_Promotions</fullName>
        <columns>Market__c</columns>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Promotion_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>India Promotions</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
            <role>INR-Brand Manager</role>
            <role>INR-Finance Manager</role>
            <role>INR-Market Manager/Admin</role>
            <role>INR-Sales Manager</role>
            <role>INR-Sales Rep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JPN_All_Activities_for_this_Market</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Promotion_Type__c</columns>
        <columns>Promotion_Code__c</columns>
        <columns>Active__c</columns>
        <columns>Target_Outlets__c</columns>
        <columns>Target_Depletion__c</columns>
        <columns>Begin_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>JPN - All Activities for this Market</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
            <roleAndSubordinates>JPN-Market Manager/Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JPN_All_Activities_for_this_Market2</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Promotion_Type__c</columns>
        <columns>Promotion_Code__c</columns>
        <columns>Active__c</columns>
        <columns>Target_Outlets__c</columns>
        <columns>Target_Depletion__c</columns>
        <columns>Begin_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>JPN - All Activities for this Market2</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
            <roleAndSubordinates>JPN-Market Manager/Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Thailand_Promotions</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Brand__c</columns>
        <columns>Begin_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Thailand</value>
        </filters>
        <label>Thailand Promotions</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
            <role>THI-Finance Manager</role>
            <role>THI-Market Manager/Admin</role>
            <role>THI-Sales Manager</role>
            <role>THI-Sales Rep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Twn_All_Activities_for_this_Market</fullName>
        <columns>Market__c</columns>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Promotion_Type__c</columns>
        <columns>Promotion_Code__c</columns>
        <columns>Begin_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Taiwan</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Taiwan - All Activities for this Market</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
            <roleAndSubordinates>TWN-Market Manager/Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Promotion Activity Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I300000017Oj1EAE_00N30000005GhY6EAK</fullName>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <field>Promotion__c.Promotion_Activity__c</field>
        <filterItems>
            <field>Promotion_Activity__c.Market__r.Name</field>
            <operation>equals</operation>
            <valueField>$User.Market__c</valueField>
        </filterItems>
        <filterItems>
            <field>$User.Market__c</field>
            <operation>equals</operation>
            <value>ALL</value>
        </filterItems>
        <filterItems>
            <field>Promotion_Activity__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Displaying only Active Promotion Activities in your Market</infoMessage>
        <isOptional>true</isOptional>
        <name>Promotion_Promotion Activity</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I300000017Oj1EAE_00NQ0000000zsHSMAY</fullName>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3 AND 6) OR (4 AND 5 AND 2 AND 6)</booleanFilter>
        <field>Promotion__c.Promotion_Activity_AUD__c</field>
        <filterItems>
            <field>Promotion_Activity__c.Promotion_Type__c</field>
            <operation>equals</operation>
            <value>Agreement</value>
        </filterItems>
        <filterItems>
            <field>Promotion_Activity__c.Wombat_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agreement</value>
        </filterItems>
        <filterItems>
            <field>Promotion_Activity__c.Promotion_Type__c</field>
            <operation>equals</operation>
            <value>Sales Promo</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales Promotion</value>
        </filterItems>
        <filterItems>
            <field>$Source.AUD_Channel__c</field>
            <operation>equals</operation>
            <valueField>Promotion_Activity__c.Channel__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Promotion_Promotion Activity</name>
        <sourceObject>Promotion__c</sourceObject>
    </namedFilters>
    <pluralLabel>Promotion Activities</pluralLabel>
    <recordTypes>
        <fullName>Promotion_Layout</fullName>
        <active>true</active>
        <description>Standard Promotion Layout</description>
        <label>Promotion Layout</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Promotions_Not_To_Wombat</fullName>
        <active>true</active>
        <description>Promotions that cannot be assigned to wombat.</description>
        <errorConditionFormula>ISPICKVAL(Activity__c , &apos;Marketing Activity&apos;)  || 
ISPICKVAL(Sub_Type__c , &apos;All Other SPAs&apos;)
&amp;&amp;  Wombat_Active__c  = TRUE</errorConditionFormula>
        <errorDisplayField>Wombat_Active__c</errorDisplayField>
        <errorMessage>This promotion is not valid to be assigned to Wombat.  Please uncheck and save again.</errorMessage>
    </validationRules>
</CustomObject>